openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cuaderno-devsecops
  labels:
    app: cuaderno-devsecops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cuaderno-devsecops
  template:
    metadata:
      labels:
        app: cuaderno-devsecops
    spec:
      containers:
        - name: web
          image: image-registry.openshift-image-registry.svc:5000/formacion-deidt/cuaderno-devsecops:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
